@@ -1090,12 +1090,17 @@ void HTMLMediaElement::loadResource(const URL& initialURL, ContentType& contentT
         return;
     }
 
+    if (!frame->page()) {
+        mediaLoadingFailed(MediaPlayer::FormatError);
+        return;
+    }
+
     URL url = initialURL;
     if (!frame->loader().willLoadMediaElementURL(url)) {
         mediaLoadingFailed(MediaPlayer::FormatError);
         return;
     }
-    
+
     // The resource fetch algorithm 
     m_networkState = NETWORK_LOADING;
 
